# ratatoskr

./: ACKNOWLEDGEMENTS.md  CMakeLists.txt  LICENSE.md  README.md  catch.hpp  main.cpp
cc/: main.cpp
cc/algorithm/: GeneticAlgorithm.h
cc/common/: Configuration.cpp  Configuration.h  FeatureVector.cpp  FeatureVector.h  FitnessProportionateSelection.cpp  FitnessProportionateSelection.h  Problem.cpp  Problem.h  TransitionTable.cpp  TransitionTable.h  VectorIndividual.cpp  VectorIndividual.h
cc/ec/common/: FitnessProportionateSelection.cpp  FitnessProportionateSelection.h  RawFitness.cpp  RawFitness.h  RawRelevance.cpp  RawRelevance.h
cc/ec/ndga/: BitVectorCrossover.cpp  BitVectorCrossover.h  BitVectorIndividual.cpp  BitVectorIndividual.h  BitVectorMutation.cpp  BitVectorMutation.h  FeatureVector.cpp  FeatureVector.h  NDGAProblem.cpp  NDGAProblem.h  NDGASession.cpp  NDGASession.h  RandomBitVectorBuilder.cpp  RandomBitVectorBuilder.h  TransitionTable.cpp  TransitionTable.h
cc/ndga/: BitVectorCrossover.cpp  BitVectorCrossover.h  BitVectorMutation.cpp  BitVectorMutation.h  EvaluationFunctions.cpp  EvaluationFunctions.h  NDGASession.cpp  NDGASession.h  RandomBitVectorBuilder.cpp  RandomBitVectorBuilder.h  Session.cpp  Session.h
cc/problem/ndga/: OneMaxProblem.cpp  OneMaxProblem.h
cc/representation/: Vector.cpp  Vector.h
cc/representation/integer/: BitFlipMutation.cpp  BitFlipMutation.h  BitString.cpp  BitString.h  IntegerVector.cpp  IntegerVector.h  PointCrossover.cpp  PointCrossover.h  RandomBitInitialization.cpp  RandomBitInitialization.h  UniformCrossover.cpp  UniformCrossover.h
cc/representation/tree/: Node.cpp  Node.h
cc/representation/vector/: Vector.cpp  Vector.h
cc/selection/: FitnessProportionateSelection.cpp
core/: Configuration.cpp  Configuration.h  EvolutionarySystem.cpp  EvolutionarySystem.h  Problem.cpp  Problem.h  Representation.cpp  Representation.h  Session.cpp  Session.h  TerminationCondition.h
core/evaluation/: EvaluationFunction.cpp  EvaluationFunction.h  Evaluator.cpp  Evaluator.h  EvolutionaryNetwork.cpp  EvolutionaryNetwork.h  Problem.cpp  Problem.h
core/experience/: EvolutionaryNetwork.cpp  EvolutionaryNetwork.h  ReplayMemory.cpp  ReplayMemory.h  Replayer.cpp  Replayer.h
core/initialization/: Builder.cpp  Builder.h  Initializer.cpp  Initializer.h
core/old/: EvolutionarySystem.h  TerminationCondition.h
core/old/evaluation/: EvaluationFunction.h  Evaluator.h
core/old/experience/: EvolutionaryNetwork.h  ReplayMemory.h
core/old/statistics/: Statistics.h
core/old/variation/: Breeder.cpp  BreedingOperator.cpp  SelectionOperator.cpp  VariationSource.h
core/representation/: Builder.h  Cost.cpp  Cost.h  FeatureMap.cpp  FeatureMap.h  Fitness.cpp  Fitness.h  Genotype.h  Individual.cpp  Individual.h  InitializationOperator.h  MutationOperator.cpp  MutationOperator.h  Population.cpp  Population.h  RecombinationOperator.cpp  RecombinationOperator.h  Relevance.cpp  Relevance.h  VariationOperator.cpp  VariationOperator.h
core/state/: Individual.cpp  Individual.h  Population.cpp  Population.h  Relevance.cpp  Relevance.h
core/statistics/: Statistics.cpp  Statistics.h
core/util/: Clonable.h  Prototype.cpp  Prototype.h  RandomChoice.cpp  RandomChoice.h  Randomizer.cpp  Randomizer.h  Singleton.cpp  Singleton.h  Thread.cpp  Thread.h
core/variation/: Breeder.cpp  Breeder.h  BreedingOperator.cpp  BreedingOperator.h  SelectionOperator.cpp  SelectionOperator.h  VariationSource.cpp  VariationSource.h
debug/: main.cpp
old/cc/algorithm/: GeneticAlgorithm.cpp  GeneticAlgorithm.h
old/cc/common/: TransitionTable.h
old/cc/ndga/: EvaluationFunctions.h
old/cc/selection/: FitnessProportionateSelection.h
old/core/: EvolutionarySystem.h  Initializer.cpp  Initializer.h  TerminationCondition.h
old/core/evaluation/: EvaluationFunction.h  Evaluator.cpp  Evaluator.h
old/core/experience/: EvolutionaryNetwork.cpp  EvolutionaryNetwork.h  ReplayMemory.h
old/core/statistics/: Statistics.h
old/core/variation/: SelectionOperator.h  VariationSource.h
old/python/: Proposal - Experiments.ipynb  debug.py  setup.py
old/python/ext/: common.cpp  core.cpp  ndga.cpp
old/unit/: common.cpp  core.cpp  ndga.cpp
old/unit/util/: SimpleBreedingOperator.h  SimpleBuilder.cpp  SimpleBuilder.h  SimpleEvaluationFunction.h  SimpleEvolutionaryNetwork.h  SimpleFeatureMap.cpp  SimpleFeatureMap.h  SimpleIndividual.h  SimpleSelectionOperator.h  SimpleVariationSource.cpp  SimpleVariationSource.h
python/: debug.py  playground.py  setup.py
python/.ipynb_checkpoints/: Proposal - Experiments-checkpoint.ipynb  Ratatoskr-checkpoint.ipynb
python/ext/: common.cpp  core.cpp  core_ext.cpp  ndga.cpp  ndga_ext.cpp
python/ext/ndga/: cc_extension.cpp
python/ext/wrapper/: BreedingOperatorWrapper.cpp  BreedingOperatorWrapper.h  BuilderWrapper.cpp  BuilderWrapper.h  CostWrapper.cpp  CostWrapper.h  EvaluationFunctionWrapper.h  FeatureMapWrapper.cpp  FeatureMapWrapper.h  FitnessWrapper.cpp  FitnessWrapper.h  IndividualWrapper.cpp  IndividualWrapper.h  RelevanceWrapper.h  SelectionOperatorWrapper.cpp  SelectionOperatorWrapper.h  VariationSourceWrapper.cpp  VariationSourceWrapper.h
python/old/python/: Ratatoskr.ipynb
python/ratatoskr/: charts.py
python/ratatoskr.egg-info/: PKG-INFO  SOURCES.txt
python/wrapper/: core_wrapper.cpp  core_wrapper.h
unit/: TestComponents.cpp  TestComponents.h  common.cpp  core.cpp  ndga.cpp  ndgp.cpp
unit/core/: unit.cpp
unit/core/util/: SimpleBreedingOperator.cpp  SimpleBreedingOperator.h  SimpleBuilder.cpp  SimpleBuilder.h  SimpleEvolutionaryNetwork.cpp  SimpleEvolutionaryNetwork.h  SimpleFeatureMap.cpp  SimpleFeatureMap.h  SimpleIndividual.cpp  TestBuilder.h  (+22 more)
unit/util/: SimpleBreedingOperator.cpp  SimpleBreedingOperator.h  SimpleBuilder.cpp  SimpleBuilder.h  SimpleEvaluationFunction.cpp  SimpleEvolutionaryNetwork.cpp  SimpleEvolutionaryNetwork.h  SimpleFeatureMap.cpp  SimpleFeatureMap.h  SimpleIndividual.cpp  SimpleIndividual.h  SimpleSelectionOperator.cpp  SimpleSelectionOperator.h  SimpleVariationSource.cpp  SimpleVariationSource.h
(+89 files in other folders)
